--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,4 @@ DOWNLOAD_TYPE="geofabrik"
 DOWNLOAD_AREA="europe/andorra"
 
 ES_URL="http://elastic:changeme@localhost:9200"
-ES_INDEX="openstreetmap_andorra"
+ES_INDEX="osm"
