--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     network_mode: host
     build:
       context: .
+      dockerfile: Dockerfile-upload
     container_name: upload
     environment:
       - TASK_NAME=${TASK_NAME}
@@ -32,9 +33,8 @@ services:
       context: .
       dockerfile: Dockerfile-osmium
     container_name: osmium
-    environment:
-      - ES_URL=${ES_URL}
-      - DATA_FILE=${DATA_FILE}
+    env_file:
+      - .env
     volumes:
       - ./scripts:/usr/src/app/scripts
       - ./data:/usr/src/app/data
