--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+black==22.1.0
 certifi==2021.10.8
 charset-normalizer==2.0.11
+click==8.0.3
 elastic-transport==8.0.1
 elasticsearch==8.0.0
 idna==3.3
+mypy-extensions==0.4.3
 osmium==3.2.0
+pathspec==0.9.0
+platformdirs==2.5.0
+python-dotenv==0.19.2
 requests==2.27.1
+tomli==2.0.1
+typing-extensions==4.1.1
 urllib3==1.26.8
